  \itemize{
    \item Add Firth test option to regression
    \item Bug fix for refFracPlot: hets significantly different from 0.5 plotted as triangles, median line shown
  }
}
\section{Changes in version 1.11.1}{
  \itemize{
    \item Add variantData slot to SeqVarData class
  }
}
\section{Changes in version 1.11.3}{
  \itemize{
    \item Add hethom method to calculate heterozygosity / non-reference homozygosity in one step
    \item Add countSingletons method
  }
}
\section{Changes in version 1.15.1}{
  \itemize{
    \item Following SeqArray, remove dependency on VariantAnnotation
    \item Add generic isSNV (replacing previous import of this generic from VariantAnnotation)
  }
}
\section{Changes in version 1.15.2}{
  \itemize{
    \item Added iterator classes: SeqVarBlockIterator, SeqVarRangeIterator, SeqVarWindowIterator, SeqVarListIterator.
    \item Creating a SeqVarData object with missing sample or variant annotation will store 0-column data frames in sampleData or variantData, instead of duplicating sample.id and variant.id.
    \item Added methods to return variant data in expanded form, with one row per alternate allele.
  }
}
\section{Changes in version 1.15.3}{
  \itemize{
    \item alleleFrequency method accounts for sex when computing frequency for X and Y chromosomes.
  }
}
\section{Changes in version 1.17.2}{
  \itemize{
    \item Change implementation of iterator classes to identify indices of selected variants on object creation and store in variantList slot. All iterator classes now extend new class SeqVarIterator.
  }
}
\section{Changes in version 1.17.6}{
  \itemize{
    \item Add option to return alternate allele dosage in a sparse matrix using the Matrix package.
    \item Improve speed of reading dosages by using seqBlockApply.
  }
}
\section{Changes in version 1.17.7}{
  \itemize{
    \item Bug fix in alleleFrequency method for SeqVarData where frequency calculation was done twice because the first calculation was not returned.
  }
}