@@ -52,6 +52,7 @@ exportMethods(show,
               getVariableLengthData,
               titv,
               alleleFrequency,
+              alleleCount,
               missingGenotypeRate,
               heterozygosity,
               hethom,
