@@ -2,6 +2,9 @@
 \alias{alleleFrequency}
 \alias{alleleFrequency,SeqVarGDSClass-method}
 \alias{alleleFrequency,SeqVarData-method}
+\alias{alleleCount}
+\alias{alleleCount,SeqVarGDSClass-method}
+\alias{alleleCount,SeqVarData-method}
 
 \title{Allele frequency}
 
@@ -10,6 +13,8 @@
 \usage{
 \S4method{alleleFrequency}{SeqVarGDSClass}(gdsobj, n=0, use.names=FALSE)
 \S4method{alleleFrequency}{SeqVarData}(gdsobj, n=0, use.names=FALSE, sex.adjust=TRUE, genome.build=c("hg19", "hg38"))
+\S4method{alleleCount}{SeqVarGDSClass}(gdsobj, n=0, use.names=FALSE)
+\S4method{alleleCount}{SeqVarData}(gdsobj, n=0, use.names=FALSE, sex.adjust=TRUE, genome.build=c("hg19", "hg38"))
 }
 
 \arguments{
@@ -24,10 +29,10 @@
 }
 
 \details{
-  Frequency can be calculated over any allele, specified by the argument
+  Frequency or count can be calculated over any allele, specified by the argument
   \code{n}.  Default is the reference allele frequency (\code{n=0}).
 
-  The \code{\link{SeqVarData}} method will calculate frequency correctly for X and Y chromosomes, provided a column "sex" is included in the sampleData slot with values "M"/"F" or 1/2. Arguments given to this method are passed to the parent method for \code{\link{SeqVarGDSClass}}.
+  The \code{\link{SeqVarData}} method will calculate frequency and count correctly for X and Y chromosomes, provided a column "sex" is included in the sampleData slot with values "M"/"F" or 1/2. Arguments given to this method are passed to the parent method for \code{\link{SeqVarGDSClass}}. The assumption is that genotypes for males on sex chromosomes are coded as diploid, "0/0" or "1/1". If this is not the case, use \code{sex.adjust=FALSE}.
 }
 
 \value{
